--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
     <!-- css files will be automatically insert here -->
     <!-- endinject -->
     <!-- endbuild -->
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.0.5/redux.js"></script>
   </head>
   <body>
     <!--[if lt IE 10]>
